<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!--
         Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
         It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
         or something similar.
    -->
    <string name="app_name">MySchedule</string>

    <!--
         By convention, "action" denotes that this String will be used as the label for an Action,
         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
    -->
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_update" translatable="false">Update</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>


    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>


    <string name="sync_account_type">haris.app.myschedule</string>
    <string name="content_authority">haris.app.myschedule.sync.MyScheduleSyncAdapter</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>


     <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>



    <string name="pref_user_id_label">User ID</string>
    <string name="pref_user_id_key" translatable="false">user_id</string>
    <string name="pref_user_id_default" translatable="false">125150200111103</string>

    <string name="pref_enable_notification_label">Notification</string>
    <string name="pref_enable_notification_key" translatable="false">notification</string>
    <string name="pref_enable_notification_default" translatable="false">true</string>
    <string name="pref_enable_notification_true">Enabled</string>
    <string name="pref_enable_notification_false">Disabled</string>


    <string name="pref_enable_ringtone_label">Ringtone</string>
    <string name="pref_enable_ringtone_key" translatable="false">ringtone</string>
    <string name="pref_enable_ringtone_default" translatable="false">true</string>
    <string name="pref_enable_ringtone_true">Enabled</string>
    <string name="pref_enable_ringtone_false">Disabled</string>


    <string name="pref_enable_vibration_label">Vibration</string>
    <string name="pref_enable_vibration_key" translatable="false">vibration</string>
    <string name="pref_enable_vibration_default" translatable="false">true</string>
    <string name="pref_enable_vibration_true">Enabled</string>
    <string name="pref_enable_vibration_false">Disabled</string>


    <string name="pref_notification_time_label">Notification Time</string>
    <string name="pref_notification_time_key" translatable="false">notification_time</string>
    <string name="pref_notification_time_default" translatable="false">30</string>

    <string name="pref_notification_time_before_60_label" translatable="false">Before 60 minutes</string>
    <string name="pref_notification_time_before_45_label" translatable="false">Before 45 minutes</string>
    <string name="pref_notification_time_before_30_label" translatable="false">Before 30 minutes</string>
    <string name="pref_notification_time_before_15_label" translatable="false">Before 15 minutes</string>
    <string name="pref_notification_time_before_10_label" translatable="false">Before 10 minutes</string>
    <string name="pref_notification_time_before_5_label" translatable="false">Before 5 minutes</string>

    <string name="pref_notification_time_before_60" translatable="false">60</string>
    <string name="pref_notification_time_before_45" translatable="false">45</string>
    <string name="pref_notification_time_before_30" translatable="false">30</string>
    <string name="pref_notification_time_before_15" translatable="false">15</string>
    <string name="pref_notification_time_before_10" translatable="false">10</string>
    <string name="pref_notification_time_before_5" translatable="false">5</string>


    <string name="expanded">I\'m the expanded notification.\nCollapse me!</string>
    <string name="collapsed">I\'m the collapsed notification.\nCreated at: %s</string>
    <string name="show_notification">Show Notification</string>
    <string name="custom_notification">I\'m a custom notification.</string>

    <string name="intro_text">This sample demonstrates how a notification is created using the
        <b>NotificationCompatBuilder</b>
        with a custom content view. The layout of the notification is defined as a
        layout resource and inflated as a <b>RemoteViews</b> object.
        \n\nOn API level 16 and above, a different layout is inflated and set as
        the <i>big content view</i>, which is used when the notification is expanded.
        \n\n<b>Use the button below to create the notification.
        \n\nIf your device is running Jelly Bean or above, try expanding or collapsing
        the notification to see the different layouts.</b>
    </string>
    <string name="collapsed_image">A single Android robot waving. Symbolises a collapsed
        notification.
    </string>
    <string name="expanded_image">Two Androids on top of each other. Symbolises an expanded
        notification.
    </string>


</resources>
